# trading_bot

./: .env.example  .gitignore  .pre-commit-config.yaml  AUDUSD_60.csv  Makefile  Pipfile  README.md  code.mov  crypto.ipynb  decision_tree  main.py  pyproject.toml  requirements.txt  stock_bot.py  stocks.ipynb  stocks.py  trading_bot.ipynb
.github/workflows/: ci.yml
.ipynb_checkpoints/: crypto-checkpoint.ipynb  stocks-checkpoint.ipynb  trading_bot-checkpoint.ipynb
bots/: crypto.ipynb  main.py  stock_bot.ipynb  stock_bot.py
configs/: default.yaml
data/: __init__.py  load_data.py  market_data.py
datasets/: ETH-USD.csv
handlers/: __init__.py  api_manager.py  cache_manager.py
models/: __init__.py  lstm.py  run_model.py
scripts/: run_lint.sh
src/: __init__.py
src/backtest/: __init__.py  engine.py
src/risk/: __init__.py  position_sizer.py
src/strategies/: __init__.py  base.py  moving_average.py
tests/: test_cache_manager.py  test_market_data_transform.py
