[project]
name = "trading-bot"
version = "0.1.0"
description = "Toy trading bot / research sandbox"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pandas",
  "python-dotenv",
  "requests",
  "torch",
]

[dependency-groups]
dev = [
  "pytest",
  "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

