[project]
name = "trading-bot"
version = "0.1.0"
description = "Trading bot research sandbox with reproducible tooling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.1",
  "pandas>=2.2",
  "python-dotenv>=1.0",
  "requests>=2.32",
  "torch>=2.8",
]

[dependency-groups]
dev = [
  "mypy>=1.11",
  "pre-commit>=3.8",
  "pytest>=8.3",
  "ruff>=0.12",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true

